corrected result display overflow property from scroll to auto

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -226,7 +226,7 @@ body {
     color: vars.$strong-cyan;
     font-size: 1.95rem;
     text-align: right;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 }
 
